# tw-stock-analyzer

./: .gitignore  API_INTEGRATION.md  AUTOMATION_GUIDE.md  BACKTEST_VISUALIZATION_GUIDE.md  COVERAGE_REPORT.md  DAILY_SCREENER_GUIDE.md  DEMO_RESULTS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  README.md  README_UV_SETUP.md  ROADMAP.md  TEST_REPORT.md  TROUBLESHOOTING.md  VISUAL_SUMMARY.md  analyze_stock.py  app.py  check_detail.py  check_install.sh  check_odd_lots.py  check_src.py  daily_monitor.py  daily_report.md  daily_routine.py  daily_screener.py  dcf_analysis.py  dcf_results.json  debug_api.py  debug_positions.py  demo.py  demo_advanced_screening.py  demo_backtest.py  demo_interactive.py  dual-strategy-design.md  fix_imports.py  heartbeat_state.json  init_path.py  install.sh  monitor.py  morning_run.py  (+28 more)
config/: settings.example.py
screening_results/: screening_2026-03-17.md  screening_2026-03-18.md
src/: __init__.py  dual_strategy.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  cache.py  fetcher.py  sinopac_fetcher.py  yahoo_fetcher.py
src/indicators/: __init__.py  advanced.py  technical.py
src/monitor/: __init__.py  watcher.py
src/notification/: __init__.py  discord_notifier.py  telegram_notifier.py
src/screener/: __init__.py  advanced_strategies.py  (+2 more)
tests/: test_advanced_indicators.py  test_advanced_strategies.py  test_backtest.py  test_data.py  test_dual_strategy.py  test_fetcher.py  test_indicators.py  test_matplotlib_charts.py  test_monitor.py  test_notification.py  test_screener.py  test_strategies.py  test_visualization.py
(+3 files in other folders)
